# fred-game

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: GAME_DESIGN.md
src/: __init__.py  __main__.py  game.py  settings.py
src/entities/: bottle.py  player.py  trash.py
src/states/: base.py  gameplay.py  menu.py
src/systems/: camera.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_bottle_collection.py  test_game_state.py  test_integration.py  test_physics.py  test_player.py  test_scoring.py
